Include airbrake_notifier via javascript_include_tag

--- a/lib/templates/javascript_notifier.erb
+++ b/lib/templates/javascript_notifier.erb
@@ -1,8 +1,4 @@
-<%= javascript_tag %Q{
-  (function(){
-    document.write(unescape("%3Cscript src='//#{asset_path('airbrake_notifier.js').gsub(/^(https?:)?\/\//, '')}' type='text/javascript'%3E%3C/script%3E"));
-  })();
-}%>
+<%= javascript_include_tag 'airbrake_notifier' %>
 <%= javascript_tag %Q{
     window.Airbrake = (typeof(Airbrake) == 'undefined' && typeof(Hoptoad) != 'undefined') ? Hoptoad : Airbrake
     Airbrake.setKey('#{api_key}');
